--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "homepage": "https://github.com/iosmann/Friend-Finder#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "node": "^10.4.0"
+    "node": "^10.4.0",
+    "start": "^5.1.0"
   },
   "engines": {
     "node": "8.9.4"
   }
-  
 }
